# nice-datasheet

./: .gitignore  README.md  bk5492.py  demo.py  instrument.py  main.py  pyproject.toml  requirements.txt  sheet.py  specs.py  step.py  style.css  test_specs.py
instruments/: __init__.py  bk5492.py  instrument.py
nicesheet/: __init__.py  capture.py  resettable_toggle.py  sheet.py  specs.py  step.py  system_info.py  tmp.json
nicesheet/instruments/: instrument.py
tests/: test_capture.py  test_sheet.py  test_specs.py
