[project]
name = "nicesheet"
version = "0.1.0"
dependencies = [
    "nicegui",
    "pyserial",
    "pygments>=2.16", # https://github.com/zauberzeug/nicegui/issues/1595
]

[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["nicesheet*"]
exclude = ["tests*"]